tests/integration/seed/predictions/invalid/text2.jsonlines
{ "uuid": "dc86e13b-9d53-468b-ba70-b19e241c43e9" , "annotations": { "FOO": { "entities": [ { "value": "textInput3", "text": "This is a prediction"} ]}} }